# polars-hist-db

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Makefile  api.html  backend-contract.html  benchmark-history.json  benchmarks.html  configuration.html  examples.html  index.html  pyproject.toml  pytest.ini  release-please-config.json  renovate.json  replicated-overrides.html  search.json
.github/: .shared-config.yaml
.github/workflows/: bespoke_build_quarto_docs.yaml  bespoke_integration-tests.yaml  bespoke_xtdb-benchmark-history.yaml  build_uv_python_wheel_pure.yaml  ci-python.yaml  ci.yaml  drift-check.yaml  integration-tests.yaml  publish-quarto-docs.yaml  publish-wheel.yaml  release-please.yaml  renovate.yaml  renovate.yml  sync-shared-drift.yaml
benchmarks/: __init__.py  record_history.py  xtdb_delta.py
dev/bench/xtdb-delta/: data.js
docs/: _quarto.yaml  api.qmd  backend-contract.qmd  benchmark-history.js  benchmark-history.json  benchmarks.qmd  configuration.qmd  replicated-overrides.qmd
examples/: basic_example.html  dataset_example.html  scratch.html
polars_hist_db/: __init__.py  observability.py  parity.py  pipeline_projection.py  types.py
polars_hist_db/backends/: __init__.py  base.py  config.py  mariadb.py  registry.py  temporal.py  xtdb.py  xtdb_arrow.py  xtdb_dataframe.py  xtdb_delta.py  xtdb_query.py  xtdb_schema.py  xtdb_staging.py  xtdb_transport.py
polars_hist_db/config/: __init__.py  config.py  dataset.py  fn_builtins.py  parser_config.py  table.py
polars_hist_db/core/: audit.py  dataframe.py  delta_table.py  table.py  table_config.py
polars_hist_db/dataset/: __init__.py  entrypoint.py  extract_item.py  foreign_key_helper.py  primary_item.py  scrape.py
polars_hist_db/loaders/: dsv_input_source.py  input_source.py  jetstream_input_source.py  transform.py
polars_hist_db/loaders/dsv/: dsv_loader.py  (+1 more)
polars_hist_db/overrides/: __init__.py  access.py  arrow.py  arrow_sql.py  arrow_xtdb.py  composition.py  config.py  crdt.py  ledger.py  operations.py  ordering.py  pagination.py  projection.py  replicated.py  sql.py  types.py  xtdb.py
polars_hist_db/utils/: __init__.py  arrow.py  clock.py  flatten.py
scripts/: sync-shared  sync-shared-python
site_libs/bootstrap/: bootstrap-463465ba8d3f692556c2f6436c7d4884.min.css  bootstrap-dark-1532cd880cf38c810c53ae3210385746.min.css  bootstrap-dark-72b16c4db8ef37be9bb921fe70362917.min.css  bootstrap-dark-c175cf49eaff78b2df2f71d60c7a266e.min.css  bootstrap-e123129df98402f9ef1521abcb5f261a.min.css  bootstrap-f7c8c5f410a87cc7d9487eb636558078.min.css
superpowers/plans/: 2026-06-28-backend-adapter-interface.html
superpowers/specs/: 2026-06-28-backend-adapter-interface-design.html
tests/: conftest.py  test_observability.py  test_parser.py  test_pipeline_projection.py
tests/audit/: test_search_files.py
tests/backends/: test_audit_reset_dataset.py  test_connection_scope.py  test_health.py  test_mariadb_backend.py  test_override_table_contract.py  test_parity_harness.py  test_registry.py  test_temporal_hints.py  test_xtdb_adbc_live.py  test_xtdb_adbc_ops.py  test_xtdb_audit_ops.py  test_xtdb_backend.py  test_xtdb_crdt_live.py  test_xtdb_dataframe_ops.py  test_xtdb_dataset_ingest.py  test_xtdb_live.py  test_xtdb_staging_ops.py
tests/benchmarks/: test_benchmark_history.py  test_xtdb_delta_benchmark.py
tests/config/: test_config_engine_factory.py  test_db_engine_config.py  test_fn_builtins.py  test_jetstream_config.py  test_pipeline_config.py  test_valid_time_config.py
tests/core/: test_correctness_regressions.py  test_table_metadata_cache.py  test_types.py
tests/dataset/: test_backend_entrypoint.py  test_dataset_workers.py  test_default_values.py  test_scrape_transactions.py  test_staging_invariant.py  test_turkey_dsv.py  test_turkey_jetstream.py  test_valid_time_contract.py
tests/loaders/: test_dsv_input_source.py  test_input_schema.py  test_jetstream_lifecycle.py
tests/nats/: test_nats_jetstream.py
tests/overrides/: test_arrow_override_crdt.py  test_arrow_override_sql_store.py  test_arrow_override_table_config.py  test_columnar_projection.py  test_composition_store.py  test_crdt_document_store.py  test_crdt_table_config.py  test_document_access_store.py  test_ordering.py  test_override_ledger_semantics.py  test_override_operations.py  test_override_table_config.py  test_replicated_override_ledger.py  test_xtdb_arrow_override_store.py  test_xtdb_crdt_document_store.py  test_xtdb_document_access_store.py
tests/sql/: test_column_types.py  test_crdt_document_store.py  test_dataframe_join.py  test_dataframe_read.py  test_delta_schema_evolution.py  test_document_access_store.py  test_finality_disabled.py  test_finality_dropoff.py  test_foreign_keys.py  test_system_versioning.py
tests/utils/: dsv_helper.py  nats_helper.py  test_arrow.py
(+8 files in other folders)
