[project]
name = "polars-hist-db"
version = "0.12.33"
description = "(dsv,jetstream) --> dataframe <--> bitemporal-tables"
authors = [{ name = "jr200", email = "jayshan+git@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "nats-py>=2.15.0",
    "pandas>=3.0.3",
    "polars[sqlalchemy]>=1.42.1",
    "pyarrow>=24.0.0",
    "pymysql>=1.2.0",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "scandir-rs>=2.9.9",
    "sql-metadata>=3.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
]

[project.optional-dependencies]
sqlalchemy = ["polars[sqlalchemy]"]
nats = ["nats-py"]
xtdb = ["adbc-driver-flightsql>=1.11.0", "psycopg[binary]>=3.3.4"]

[project.urls]
Repository = "https://github.com/jr200-labs/polars-hist-db"

[project.scripts]
polars-hist-db-parity = "polars_hist_db.parity:main"

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "ipykernel>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "quarto-cli",
    "ruff>=0.15.20",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "pyarrow-stubs>=20.0.0.20260625",
]

[tool.setuptools.package-data]
"polars_hist_db" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -m 'not integration'"
log_cli = "true"
log_cli_level = "WARN"
markers = [
    "integration: needs external infra (MySQL / NATS); excluded from default collection. Run via `pytest -m integration` in a workflow that brings the infra up.",
]
# log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests"
]

[tool.uv.sources]
quarto-cli = { git = "https://github.com/quarto-dev/quarto-cli", rev = "effe14586db57a9e09271ab9ac4ed35fcbd300dc" }

[tool.mypy]
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
packages = ["polars_hist_db"]

[[tool.mypy.overrides]]
module = [
    "sql_metadata.*",
    "scandir_rs.*",
    "nats.*",
    "nkeys.*",
    "adbc_driver_flightsql.*",
    "psycopg.*",
    "pyarrow.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.ruff]
extend = ".shared/ruff.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
